--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,31 @@
 input:focus {
     outline: none;
   }
+
+  .slider {
+    position: absolute;
+    -webkit-appearance: none;
+     appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 3px;
+    background: transparent;
+    outline: none;
+    z-index: 1;
+    margin: 0;
+    padding: 0; 
+  }
+  
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    margin-top: -5px;
+  }
   
