add form styling to addNewAlbumContent

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,11 @@ input:focus {
 body {
   @apply bg-primaryBackground_Dark text-primaryText_Dark;
 }
+
+
+
+::placeholder {
+  @apply text-primaryPlaceholderText_Dark;
+  @apply font-regular;
+  @apply text-mdText
+}
