--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::before, *::after{
+  font-family: "Inter", sans-serif;
+}
+
 
 input:focus {
     outline: none;
